airflow/logs/dag_id=s3_to_postgres_dag/run_id=manual__2024-07-24T05:19:57.754065+00:00/task_id=transfer_csv_to_db/attempt=2.log
[2024-07-24T05:28:24.789+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-24T05:28:24.805+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:19:57.754065+00:00 [queued]>
[2024-07-24T05:28:24.811+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:19:57.754065+00:00 [queued]>
[2024-07-24T05:28:24.812+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-07-24T05:28:24.818+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): transfer_csv_to_db> on 2024-07-24 05:19:57.754065+00:00
[2024-07-24T05:28:24.823+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62: DeprecationWarning: This process (pid=543) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-24T05:28:24.824+0000] {standard_task_runner.py:64} INFO - Started process 545 to run task
[2024-07-24T05:28:24.824+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 's3_to_postgres_dag', 'transfer_csv_to_db', 'manual__2024-07-24T05:19:57.754065+00:00', '--job-id', '17', '--raw', '--subdir', 'DAGS_FOLDER/accommodations.py', '--cfg-path', '/tmp/tmp7th1m9ch']
[2024-07-24T05:28:24.824+0000] {standard_task_runner.py:91} INFO - Job 17: Subtask transfer_csv_to_db
[2024-07-24T05:28:24.881+0000] {task_command.py:426} INFO - Running <TaskInstance: s3_to_postgres_dag.transfer_csv_to_db manual__2024-07-24T05:19:57.754065+00:00 [running]> on host 7f96a5b4d944
[2024-07-24T05:28:24.932+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='s3_to_postgres_dag' AIRFLOW_CTX_TASK_ID='transfer_csv_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-07-24T05:19:57.754065+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-24T05:19:57.754065+00:00'
[2024-07-24T05:28:24.932+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-24T05:28:24.945+0000] {base.py:84} INFO - Using connection ID 'aws_default' for task execution.
[2024-07-24T05:28:24.945+0000] {connection_wrapper.py:388} INFO - AWS Connection (conn_id='aws_default', conn_type='aws') credentials retrieved from login and password.
[2024-07-24T05:28:25.246+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-24T05:28:25.247+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/accommodations.py", line 32, in save_file_to_db
    cur.execute(sql, row)
psycopg2.errors.SyntaxError: syntax error at or near "end"
LINE 1: ...tendance, entities, duration, start, start_local, end, end_l...
                                                             ^

[2024-07-24T05:28:25.264+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=s3_to_postgres_dag, task_id=transfer_csv_to_db, run_id=manual__2024-07-24T05:19:57.754065+00:00, execution_date=20240724T051957, start_date=20240724T052824, end_date=20240724T052825
[2024-07-24T05:28:25.280+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 17 for task transfer_csv_to_db (syntax error at or near "end"
LINE 1: ...tendance, entities, duration, start, start_local, end, end_l...
                                                             ^
; 545)
[2024-07-24T05:28:25.318+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-07-24T05:28:25.339+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-24T05:28:25.340+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
